--- a/soa_integrations/views/plan_servicio_view.xml
+++ b/soa_integrations/views/plan_servicio_view.xml
@@ -12,11 +12,7 @@
                         <field name="company_id" groups="base.group_multi_company" required="1" readonly="1"/>
                     </group>
                     <group>
-                        <field name="prod_ids">
-                            <tree string="Servicios">
-                                <field name="name" string="Servicios" groups="base.group_multi_company" required="1" readonly="1"/>
-                            </tree>
-                        </field>
+                        <field name="prod_id" groups="base.group_multi_company" required="1" readonly="1"/>
                     </group>
                 </form>
             </field>
