--- a/soa_integrations/views/product_view.xml
+++ b/soa_integrations/views/product_view.xml
@@ -14,7 +14,7 @@
                                     <field name="cod_soa" string="Cod-SOA-PlanServicio"/>
                                     <field name="id" string="Cod ODOO-PlanServicio"/>
                                     <field name="plan_id" string="Plan"/>
-                                    <field name="prod_ids"/>
+                                    <field name="prod_id"/>
                                 </tree>
                             </field>
                         </group>
