[IMP] Purchase order SOA Plan Service

--- a/soa_integrations/views/purchase_order_view.xml
+++ b/soa_integrations/views/purchase_order_view.xml
@@ -12,6 +12,7 @@
                             <field name="support_num_soa"/>
                             <field name="cod_soa"/>
                             <field name="record_num_soa"/>
+                            <field name="product_service_plan_id"/>
                         </group>
                     </page>
                 </xpath>
