--- a/soa_integrations/views/menus_view.xml
+++ b/soa_integrations/views/menus_view.xml
@@ -11,6 +11,15 @@
         <field name="res_model">product.services.plans</field>
         <field name="view_mode">tree,form</field>
     </record>
+     <record id="soa_integration_api_action" model="ir.actions.act_window">
+        <field name="name">SOA</field>
+        <field name="res_model">soa.integration.api</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+
+    <menuitem id="soa_integration_api" name="SOA" web_icon="soa_integration_api,static/description/icon.png"/>
+    <menuitem id="soa_integration_api_child" parent="soa_integration_api" action="soa_integration_api_action"/>
 
     <menuitem name="Planes" id="soa_integrations_planes" parent="account.account_account_menu" action="planes_action"/>
     <menuitem name="Plan - Servicios" id="soa_integrations_plan_servicio" parent="account.account_account_menu" action="plan_servicio_action"/>
