--- a/soa_integrations/views/purchase_order_view.xml
+++ b/soa_integrations/views/purchase_order_view.xml
@@ -16,6 +16,9 @@
                         </group>
                     </page>
                 </xpath>
+                 <xpath expr="//notebook/page/field[@name='order_line']/tree/field[@name='product_id']" position="after">
+              <field name="plan_id"/>
+          </xpath>
             </field>
         </record>
     </data>
