--- a/soa_integrations/views/planes_view.xml
+++ b/soa_integrations/views/planes_view.xml
@@ -8,6 +8,7 @@
                 <group>
                     <field name="name"/>
                     <field name="cod_soa"/>
+                    <field name="partner_id"/>
                     <field name="company_id" groups="base.group_multi_company" required="1" readonly="1"/>
                 </group>
             </form>
@@ -21,6 +22,7 @@
             <tree string="Plan">
                 <field name="name"/>
                 <field name="cod_soa"/>
+                <field name="partner_id"/>
                 <field name="company_id"/>
             </tree>
         </field>
