[UPD] SOA Integrations by company

--- a/soa_integrations/views/soa_integration_api_view.xml
+++ b/soa_integrations/views/soa_integration_api_view.xml
@@ -11,6 +11,7 @@
                 <sheet>
                     <group>
                         <group>
+                            <field name="company_id"/>
                             <field name="username"/>
                             <field name="password"/>
                         </group>
@@ -31,6 +32,7 @@
         <field name="model">soa.integration.api</field>
         <field name="arch" type="xml">
             <tree>
+                <field name="company_id"/>
                 <field name="username"/>
                 <field name="password"/>
                 <field name="client_id"/>
