--- a/soa_integrations/views/plan_servicio_view.xml
+++ b/soa_integrations/views/plan_servicio_view.xml
@@ -12,7 +12,7 @@
                         <field name="company_id" groups="base.group_multi_company" required="1" readonly="1"/>
                     </group>
                     <group>
-                        <field name="prod_id" groups="base.group_multi_company" required="1" readonly="1"/>
+                        <field name="prod_id" groups="base.group_multi_company" required="1"/>
                     </group>
                 </form>
             </field>
