[UPD] SOA CR Token

--- a/soa_integrations/views/soa_integration_api_view.xml
+++ b/soa_integrations/views/soa_integration_api_view.xml
@@ -11,6 +11,7 @@
                 <sheet>
                     <group>
                         <group>
+                            <field name="soa_enabled"/>
                             <field name="company_id"/>
                             <field name="username"/>
                             <field name="password"/>
