--- a/l10n_mx_xml_extended/views/account_move_view.xml
+++ b/l10n_mx_xml_extended/views/account_move_view.xml
@@ -6,7 +6,7 @@
             <field name="model">account.move</field>
             <field name="inherit_id" ref="account.view_move_form"/>
             <field name="arch" type="xml">
-                    <xpath expr="//form/sheet/field[@name='ref']" position="after">
+                    <xpath expr="//form/sheet/group/group/field[@name='ref']" position="after">
                         <field name="l10n_mx_xml_poliza_uuid"/>
                     </xpath>
             </field>
