--- a/fiscal_year_sync_app/views/account_fiscalperiod_view.xml
+++ b/fiscal_year_sync_app/views/account_fiscalperiod_view.xml
@@ -28,6 +28,10 @@
                         </group>
                     </group>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids"/>
+                    <field name="message_ids"/>
+                </div>
             </form>
         </field>
     </record>
